Use a gradle worker to invoke the render tool
Bug: 321089815
Test: Existing tests
Change-Id: If0d73a2ccc0064c50b30a0f806761f61b8832e04